--- a/src/index.html
+++ b/src/index.html
@@ -57,10 +57,10 @@
             <p class="text-center">Loading...</p>
           </div>
           <div id="content">
-            <!-- <form onSubmit="App.createTask(); return false;">
-              <input id="newTask" type="text" class="form-control" placeholder="Add task..." required>
+            <form onSubmit= "App.createAssignment(); return false;">
+              <input id="newAssignment" type="text" class="form-control" placeholder="Add Assignment..." required>
               <input type="submit" hidden="">
-            </form> -->
+            </form>
             <ul id="assignmentList" class="list-unstyled">
               <div class="assignmentTemplate" class="checkbox" style="display: none">
                 <label>
