Created pages showing classes and assignments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="blog.html">Classes</a>
+                           <a class="nav-link" href="classes.html">Classes</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="about.html">About</a>
@@ -74,77 +74,77 @@
                </nav>
             </div>
          </div>
-      <!--banner section start -->
-      <div class="banner_section layout_padding">
-         <div id="my_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <div class="banner_saedu_main">
-                        <div class="row">
-                           <div class="col-md-6">
-                              <h1 class="banner_saedu">Assignment Tracking with Blockchain!</h1>
-                              <p class="banner_text">Track Progress and unlock the next assignment on the ledger.</p>
-                              <div class="btn_main">
-                                 <div class="login_bt active"><a href="#">Login</a></div>
-                                 <div class="aboutus_bt"><a href="#">Learn About Us</a></div>
+         <!--banner section start -->
+         <div class="banner_section layout_padding">
+            <div id="my_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container">
+                        <div class="banner_saedu_main">
+                           <div class="row">
+                              <div class="col-md-6">
+                                 <h1 class="banner_saedu">Assignment Tracking with Blockchain!</h1>
+                                 <p class="banner_text">Track Progress and unlock the next assignment on the ledger.</p>
+                                 <div class="btn_main">
+                                    <div class="login_bt active"><a href="#">Login</a></div>
+                                    <div class="aboutus_bt"><a href="#">Learn About Us</a></div>
+                                 </div>
+                              </div>
+                              <div class="col-md-6">
+                                 <div class="image_1"><img src="images/student_img-1.png"></div>
                               </div>
                            </div>
-                           <div class="col-md-6">
-                              <div class="image_1"><img src="images/student_img-1.png"></div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="carousel-item">
+                     <div class="container">
+                        <div class="banner_saedu_main">
+                           <div class="row">
+                              <div class="col-md-6">
+                                 <h1 class="banner_saedu"> Completition of courses added to the smart contract Ledger.</h1>
+                                 <p class="banner_text">Never have to dispute an assingment or a grade ever again.</p>
+                                 <div class="btn_main">
+                                    <div class="login_bt active"><a href="#"> Login </a></div>
+                                    <div class="aboutus_bt"><a href="#">Learn About Us</a></div>
+                                 </div>
+                              </div>
+                              <div class="col-md-6">
+                                 <div class="image_1"><img src="images/student_img-1.png"></div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="carousel-item">
+                     <div class="container">
+                        <div class="banner_saedu_main">
+                           <div class="row">
+                              <div class="col-md-6">
+                                 <h1 class="banner_saedu">Sybil Attack EDU integrating Education and Ethereum.</h1>
+                                 <p class="banner_text">Future proofing education.</p>
+                                 <div class="btn_main">
+                                    <div class="login_bt active"><a href="#">Login</a></div>
+                                    <div class="aboutus_bt"><a href="#">Learn About Us</a></div>
+                                 </div>
+                              </div>
+                              <div class="col-md-6">
+                                 <div class="image_1"><img src="images/student_img-1.png"></div>
+                              </div>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="banner_saedu_main">
-                        <div class="row">
-                           <div class="col-md-6">
-                              <h1 class="banner_saedu"> Completition of courses added to the smart contract Ledger.</h1>
-                              <p class="banner_text">Never have to dispute an assingment or a grade ever again.</p>
-                              <div class="btn_main">
-                                 <div class="login_bt active"><a href="#"> Login </a></div>
-                                 <div class="aboutus_bt"><a href="#">Learn About Us</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-6">
-                              <div class="image_1"><img src="images/student_img-1.png"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="banner_saedu_main">
-                        <div class="row">
-                           <div class="col-md-6">
-                              <h1 class="banner_saedu">Sybil Attack EDU integrating Education and Ethereum.</h1>
-                              <p class="banner_text">Future proofing education.</p>
-                              <div class="btn_main">
-                                 <div class="login_bt active"><a href="#">Login</a></div>
-                                 <div class="aboutus_bt"><a href="#">Learn About Us</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-6">
-                              <div class="image_1"><img src="images/student_img-1.png"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+               <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
+               <i class="fa fa-arrow-left" style="font-size:24px"></i>
+               </a>
+               <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
+               <i class="fa fa-arrow-right" style="font-size:24px"></i>
+               </a>
             </div>
-            <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-            <i class="fa fa-arrow-left" style="font-size:24px"></i>
-            </a>
-            <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-            <i class="fa fa-arrow-right" style="font-size:24px"></i>
-            </a>
          </div>
-      </div>
-      <!--banner section end -->
+         <!--banner section end -->
       </div>
       <!--header section end -->
       <!-- services section start -->
@@ -154,38 +154,46 @@
             <div class="services_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_main">
-                        <img src="images/course-bc.png" class="image_8" style="width:100%">
-                        <div class="text_main">
-                           <div class="seemore_text">Blockchain</div>
+                     <a href="assignments.html">
+                        <div class="image_main">
+                           <img src="images/course-bc.png" class="image_8" style="width:100%">
+                           <div class="text_main">
+                              <div class="seemore_text">Blockchain</div>
+                           </div>
                         </div>
-                     </div>
+                     </a>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_main">
-                        <img src="images/course-rb.jpeg" class="image_8" style="width:100%">
-                        <div class="text_main">
-                           <div class="seemore_text">Robotics</div>
+                     <a href="assignments.html">
+                        <div class="image_main">
+                           <img src="images/course-rb.jpeg" class="image_8" style="width:100%">
+                           <div class="text_main">
+                              <div class="seemore_text">Robotics</div>
+                           </div>
                         </div>
-                     </div>
+                     </a>
                   </div>
                </div>
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_main">
-                        <img src="images/course-ai.png" class="image_8" style="width:100%">
-                        <div class="text_main">
-                           <div class="seemore_text">Artificial Intelligence</div>
+                     <a href="assignments.html">
+                        <div class="image_main">
+                           <img src="images/course-ai.png" class="image_8" style="width:100%">
+                           <div class="text_main">
+                              <div class="seemore_text">Artificial Intelligence</div>
+                           </div>
                         </div>
-                     </div>
+                     </a>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_main">
-                        <img src="images/course-cs.jpg" class="image_8" style="width:100%">
-                        <div class="text_main">
-                           <div class="seemore_text">Computer Science</div>
+                     <a href="assignments.html">
+                        <div class="image_main">
+                           <img src="images/course-cs.jpg" class="image_8" style="width:100%">
+                           <div class="text_main">
+                              <div class="seemore_text">Computer Science</div>
+                           </div>
                         </div>
-                     </div>
+                     </a>
                   </div>
                </div>
             </div>
@@ -377,4 +385,3 @@
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
    </body>
 </html>
-
