--- a/frontend/about.html
+++ b/frontend/about.html
@@ -39,7 +39,7 @@
          <div class="header_bg">
             <div class="container">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <a class="logo" href="index.html"><img src="images/logo.png"></a>
+                  <a class="logo" href="index.html"><img src="images/saedu_logo.png"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -49,16 +49,14 @@
                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
+                           <a class="nav-link" href="classes.html">Classes</a>
+                        </li>
+                        <li class="nav-item">
                            <a class="nav-link" href="about.html">About</a>
                         </li>
+
                         <li class="nav-item">
-                           <a class="nav-link" href="services.html">Services</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="blog.html">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="contact.html">Contact Us</a>
+                           <a class="nav-link" href="assignments.html">Course Management</a>
                         </li>
                      </ul>
                      <div class="call_section">
@@ -80,16 +78,17 @@
       <div class="news_section layout_padding">
          <div class="container">
             <h1 class="news_taital">Our About</h1>
-            <p class="news_text">Do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <p class="news_text">Put info About Us here...</p>
             <div class="news_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="news_taital_box">
-                        <p class="date_text">01 Jan 2020</p>
+                     <div class="news_saedu_box">
+                        <p class="date_text">08 Nov 2023</p>
                         <h4 class="make_text">Make it Simple</h4>
-                        <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                        <p class="post_text">Post By : Casinal</p>
-                     </div>
+                        <p class="lorem_text">With the use of smart contacts applied to a To-do list we can apply smart contracts to a list of
+                        education assingments. </p>
+                        <p class="post_text">Post By : Sybil Attack Admin</p>
+                     </div>                  
                   </div>
                   <div class="col-md-6">
                      <img src="images/img-6.png" class="image_6" style="width:100%">
@@ -108,32 +107,32 @@
             <div class="footer_section_2">
                <div class="row">
                   <div class="col-lg-3 col-md-6 margin_top">
-                     <div class="call_text"><a href="#"><img src="images/call-icon1.png"><span class="padding_left_15">Call Now +01 9876543210</span></a></div>
-                     <div class="call_text"><a href="#"><img src="images/mail-icon1.png"><span class="padding_left_15">demo@gmail.com</span></a></div>
+                     <div class="call_text"><a href="#"><img src="images/call-icon1.png"><span class="padding_left_15">Call Now +01 (602) 999-5050</span></a></div>
+                     <div class="call_text"><a href="#"><img src="images/mail-icon1.png"><span class="padding_left_15">admin@sybilattack.edu</span></a></div>
                   </div>
                   <div class="col-lg-3 col-md-6">
                      <div class="information_main">
-                        <h4 class="information_text">Information</h4>
-                        <p class="many_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+                        <h4 class="information_text">Learn</h4>
+                        <p class="many_text">"The Web as I envisaged it, we have not seen it yet. The future is still so much bigger than the past" - Tim Berners-Lee</p>
                      </div>
                   </div>
                   <div class="col-lg-3 col-md-6">
                      <div class="information_main">
                         <h4 class="information_text">Helpful Links</h4>
-                        <div class="footer_menu">
-                           <ul>
-                              <li><a href="index.html">Home</a></li>
-                              <li><a href="about.html">About</a></li>
-                              <li><a href="services.html">Services</a></li>
-                              <li><a href="blog.html">Blog</a></li>
-                              <li><a href="news.html">News</a></li>
-                           </ul>
+                          <div class="footer_menu">
+                              <ul>
+                                 <li><a href="index.html">Home</a></li>
+                                 <li><a href="classes.html">Classes</a></li>
+                                 <li><a href="about.html">About</a></li>
+                                 <li><a href="blog.html">News</a></li>
+                                 <li><a href="assignments.html">Login</a></li>
+                              </ul>
                         </div>
                      </div>
                   </div>
                   <div class="col-lg-3 col-md-6">
                      <div class="information_main">
-                        <div class="footer_logo"><a href="index.html"><img src="images/footer-logo.png"></a></div>
+                        <div class="footer_logo"><a href="index.html"><img src="images/saedu_footer-logo.png"></a></div>
                      </div>
                   </div>
                </div>
@@ -141,13 +140,16 @@
          </div>
       </div>
       <!-- footer section end -->
+
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">© 2020 All Rights Reserved. <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">© 2023 All Rights Reserved / ASU CSE 598. <a href="https://html.design">Thank's to Free html Templates</a>
+            </p>
          </div>
       </div>
       <!-- copyright section end -->
+
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
