--- a/frontend/assignments.html
+++ b/frontend/assignments.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Sybil Attack EDU | Course To-do List</title>
+    <title>Sybil Attack EDU | Course Management Tool</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -83,10 +83,11 @@
         </div>
     </div>
     <!--header section end -->
+
     <!-- assignments section start -->
     <div class="assignments_section">
         <div class="container-fluid">
-            <h1 class="services_saedu">Assignments</h1>
+            <h1 class="services_saedu"><center><span style="color: #7337b0">Course</span> Assignments</h1></center>
             <div class="row">
                 <main role="main" class="col-lg-12 d-flex justify-content-center">
                     <div id="loader" class="text-center">
@@ -116,6 +117,7 @@
         </div>            
     </div>
     <!-- assignments section end -->
+
     <!-- footer section start -->
     <div class="footer_section layout_padding">
         <div class="container">
@@ -176,6 +178,14 @@
     <!-- javascript --> 
     <script src="js/owl.carousel.js"></script>
     <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.3.3/dist/web3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@truffle/contract@4.3.5/dist/truffle-contract.js"></script>
+    <!--<script src="vendor/truffle-contract/dist/truffle-contract.js"></script> -->
+    <script src="app.js"></script>
 </body>
 </html>
 
