--- a/frontend/classes.html
+++ b/frontend/classes.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <!-- site metas -->
-        <title>Sybil Attack EDU | Course To-do List</title>
+        <title>Sybil Attack EDU | Class List</title>
         <meta name="keywords" content="">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -55,10 +55,7 @@
                             <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="services.html">Login</a>
+                            <a class="nav-link" href="assignments.html">Course Management</a>
                             </li>
                         </ul>
                         <div class="call_section">
@@ -157,7 +154,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="information_main">
-                            <h4 class="information_text">Information</h4>
+                            <h4 class="information_text">Learn</h4>
                             <p class="many_text">"The Web as I envisaged it, we have not seen it yet. The future is still so much bigger than the past" - Tim Berners-Lee</p>
                         </div>
                     </div>
@@ -167,10 +164,10 @@
                             <div class="footer_menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="blog.html">Classes</a></li>
+                                <li><a href="classes.html">Classes</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li><a href="news.html">News</a></li>
-                                <li><a href="services.html">Login</a></li>
+                                <li><a href="blog.html">News</a></li>
+                                <li><a href="assignments.html">Login</a></li>
                             </ul>
                             </div>
                         </div>
