--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,10 +55,7 @@
                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="contact.html">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="services.html">Login</a>
+                           <a class="nav-link" href="assignments.html">Course Managment</a>
                         </li>
                      </ul>
                      <div class="call_section">
@@ -228,7 +225,7 @@
       <!-- blog section start -->
       <div class="blog_section layout_padding">
          <div class="container">
-            <h1 class="news_saedu">Our Bolg</h1>
+            <h1 class="news_saedu">Going Forward</h1>
             <p class="news_text">Learn more about our future work. Be apart of the project with us.</p>
             <div class="blog_section_2">
                <div class="row">
@@ -336,7 +333,7 @@
                   </div>
                   <div class="col-lg-3">
                      <div class="information_main">
-                        <h4 class="information_text">Information</h4>
+                        <h4 class="information_text">Learn</h4>
                         <p class="many_text">"The Web as I envisaged it, we have not seen it yet. The future is still so much bigger than the past" - Tim Berners-Lee</p>
                      </div>
                   </div>
@@ -346,10 +343,10 @@
                         <div class="footer_menu">
                            <ul>
                               <li><a href="index.html">Home</a></li>
-                              <li><a href="blog.html">Classes</a></li>
+                              <li><a href="classes.html">Classes</a></li>
                               <li><a href="about.html">About</a></li>
-                              <li><a href="news.html">News</a></li>
-                              <li><a href="services.html">Login</a></li>
+                              <li><a href="blog.html">News</a></li>
+                              <li><a href="assignments.html">Login</a></li>
                            </ul>
                         </div>
                      </div>
@@ -367,7 +364,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">© 2023 All Rights Reserved / ASU CSE 598. <a href="https://html.design">Thank's to Free html Templates</a></p>
+            <p class="copyright_text">© 2023 All Rights Reserved / ASU CSE 598. <a href="https://html.design">Thanks to Free html Templates</a></p>
          </div>
       </div>
       <!-- copyright section end -->
