--- a/frontend/about.html
+++ b/frontend/about.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>About</title>
+      <title>Sybil Attack EDU | About</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -124,7 +124,6 @@
                                  <li><a href="index.html">Home</a></li>
                                  <li><a href="classes.html">Classes</a></li>
                                  <li><a href="about.html">About</a></li>
-                                 <li><a href="blog.html">News</a></li>
                                  <li><a href="assignments.html">Login</a></li>
                               </ul>
                         </div>
