--- a/frontend/assignments.html
+++ b/frontend/assignments.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Sybil Attack EDU | Course Management Tool</title>
+    <title>Sybil Attack EDU | Course Management</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -34,31 +34,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 
     <style>
-        main {
-        margin-top: 60px;
-        }
-        
-        form {
-        width: 350px;
-        margin-bottom: 10px;
-        }
-
-        label{
-            font-size: 16pt;
-            color:rgb(80, 80, 80);
-            background-color: rgba(137, 43, 226, 0.295);
-            border-radius: 8px;
-            border: 1px solid rgba(158, 158, 158, 0.6);
-            max-width: 1000px;
-        }
-
-        div.assignments_section{
-            padding-bottom: 300px;
-        }
-
         #completedAssignmentList .content {
           color: grey;
-          text-decoration: line-through;
         }
         
     </style>
@@ -76,19 +53,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                           <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="classes.html">Classes</a>
+                           <a class="nav-link" href="classes.html">Classes</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                           <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="services.html">Login</a>
+                           <a class="nav-link" href="assignments.html">Course Managment</a>
                         </li>
                     </ul>
                     <div class="call_section">
@@ -112,18 +86,15 @@
         <div class="container-fluid">
             <h1 class="services_saedu"><center><span style="color: #7337b0">Course</span> Assignments</h1></center>
             <div class="row">
-                <div class="col-lg-12 d-flex justify-content-center">
-                    <form onSubmit= "App.createAssignment(); return false;">
-                    <input id="newAssignment" type="text" class="form-control" placeholder="Add Assignment..." required>
-                    <input type="submit" hidden="">
-                    </form>
-                    <br>
-                </div>
                 <main role="main" class="col-lg-12 d-flex justify-content-center">
-                    <!-- <div id="loader" class="text-center">
+                    <div id="loader" class="text-center">
                         <p class="text-center">Loading...</p>
-                    </div> -->
+                    </div>
                     <div id="content">
+                        <form onSubmit= "App.createAssignment(); return false;">
+                            <input id="newAssignment" type="text" class="form-control" placeholder="Add Assignment..." required>
+                            <input type="submit" hidden="">
+                        </form>
                         <ul id="assignmentList" class="list-unstyled">
                             <div class="assignmentTemplate" class="checkbox" style="display: none">
                                 <label>
@@ -137,6 +108,9 @@
                     </div>
                 </main>
             </div>
+            <br>
+            <br>
+            <br>
         </div>            
     </div>
     <!-- assignments section end -->
@@ -154,7 +128,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="information_main">
-                        <h4 class="information_text">Information</h4>
+                        <h4 class="information_text">Learn</h4>
                         <p class="many_text">"The Web as I envisaged it, we have not seen it yet. The future is still so much bigger than the past" - Tim Berners-Lee</p>
                     </div>
                 </div>
@@ -162,13 +136,12 @@
                     <div class="information_main">
                         <h4 class="information_text">Helpful Links</h4>
                         <div class="footer_menu">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="blog.html">Classes</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="news.html">News</a></li>
-                            <li><a href="services.html">Login</a></li>
-                        </ul>
+                           <ul>
+                              <li><a href="index.html">Home</a></li>
+                              <li><a href="classes.html">Classes</a></li>
+                              <li><a href="about.html">About</a></li>
+                              <li><a href="assignments.html">Login</a></li>
+                           </ul>
                         </div>
                     </div>
                 </div>
