integrated frontend with backend

--- a/src/about.html
+++ b/src/about.html
@@ -78,7 +78,7 @@
       <div class="news_section layout_padding">
          <div class="container">
             <h1 class="news_taital">Our About</h1>
-            <p class="news_text">Put info About Us here...</p>
+            <p class="news_text">We are passionate about teaching students computer science!</p>
             <div class="news_section_2">
                <div class="row">
                   <div class="col-md-6">
